--- a/03_New_Distn_Tests/00_Master/Bunch_Output_Playground.ipynb
+++ b/03_New_Distn_Tests/00_Master/Bunch_Output_Playground.ipynb
@@ -287,7 +287,7 @@
     "closed_orbit_x = -0.000669\n",
     "closed_orbit_xp = 0.000044\n",
     "\n",
-    "X0 = DELTAP*DX0 + 4.865687798471532e-18 + closed_orbit_x\n",
+    "X0 = DELTAP*DX0 + closed_orbit_x\n",
     "PX0 = DELTAP*DPX0 + closed_orbit_xp\n",
     "Z0 = np.zeros(np.shape(X0))\n",
     "\n",
