05: 01: added equal y orbit offset to drive position oscillation

--- a/05_Chroma_Scan_NoSC/Operational_100um.ipynb
+++ b/05_Chroma_Scan_NoSC/Operational_100um.ipynb
@@ -131,9 +131,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_label = 'PS_Transfer_Test'\n",
+    "main_label = 'PS_Transfer_Operational'\n",
     "sc = 'noSC'\n",
-    "legend_label = r'$\\frac{\\delta p}{p_0}$'"
+    "legend_label = r'$\\frac{\\delta p}{p_0}$'\n",
+    "save_folder = 'Plots/Operational/Simple_100um/'"
    ]
   },
   {
@@ -614,7 +615,7 @@
     "ax1.set_xlim(-1,30);\n",
     "#ax1.set_ylim(-2,2);\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qx_harmonic.png'\n",
+    "savename = save_folder + 'qx_harmonic.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -738,7 +739,7 @@
     "ax1.set_xlim(-1,30);\n",
     "#ax1.set_ylim(-2,2);\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qy_harmonic.png'\n",
+    "savename = save_folder + 'qy_harmonic.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -800,7 +801,7 @@
     "ax1.legend(fontsize='x-small', loc=1)\n",
     "ax1.grid(lw=0.5, ls=':')\n",
     "\n",
-    "savename = 'Plots/Simple_100um/y_fft.png'\n",
+    "savename = save_folder + 'y_fft.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -837,7 +838,7 @@
     "ax1.set_xlim(-3.1E-3,3.1E-3);\n",
     "#ax1.set_ylim(0.215, 0.245);\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qy.png'\n",
+    "savename = save_folder + 'qy.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -899,7 +900,7 @@
     "ax1.legend(fontsize='x-small', loc=1)\n",
     "ax1.grid(lw=0.5, ls=':')\n",
     "\n",
-    "savename = 'Plots/Simple_100um/x_fft.png'\n",
+    "savename = save_folder + 'x_fft.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -935,7 +936,7 @@
     "ax1.set_xlim(-3.1E-3,3.1E-3);\n",
     "ax1.set_ylim(0.205, 0.225);\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qx.png'\n",
+    "savename = save_folder + 'qx.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -1000,7 +1001,7 @@
     "ax1.legend(fontsize='x-small', loc=1)\n",
     "ax1.grid(lw=0.5, ls=':')\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qy_naff.png'\n",
+    "savename = save_folder + 'qy_naff.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -1057,7 +1058,7 @@
     "ax1.legend(fontsize='x-small', loc=4)\n",
     "ax1.grid(lw=0.5, ls=':')\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qx_naff.png'\n",
+    "savename = save_folder + 'qx_naff.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
@@ -1107,14 +1108,16 @@
     "ax1.legend(fontsize='x-small', loc=4)\n",
     "ax1.grid(lw=0.5, ls=':')\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qx_cf.png'\n",
+    "savename = save_folder + 'qx_cf.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1150,7 +1153,7 @@
     "ax1.legend(fontsize='x-small', loc=4)\n",
     "ax1.grid(lw=0.5, ls=':')\n",
     "\n",
-    "savename = 'Plots/Simple_100um/qy_cf.png'\n",
+    "savename = save_folder + 'qy_cf.png'\n",
     "plt.savefig(savename, dpi = 800);"
    ]
   },
