--- a/04_Mini_Scan/RF_SC.ipynb
+++ b/04_Mini_Scan/RF_SC.ipynb
@@ -433,7 +433,8 @@
     "colors = cm.rainbow(np.linspace(0, 1, len(dd1.keys())))\n",
     "c_it = int(0)\n",
     "\n",
-    "for key, value in (dd1.iteritems()):\n",
+    "#for key, value in (dd1.iteritems()):\n",
+    "key = \n",
     "    \n",
     "        y = (dd1[key][parameter][0]-np.mean(dd1[key][parameter][0]))\n",
     "        #try:\n",
