--- a/07_Chroma_Scan_SC_NoRF/Operational_0_offset.ipynb
+++ b/07_Chroma_Scan_SC_NoRF/Operational_0_offset.ipynb
@@ -236,7 +236,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot and name parameters etc"
+    "# No Space Charge No RF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot and name parameters etc"
    ]
   },
   {
